<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search_books"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_view_mode"
        android:icon="@drawable/ic_grid"
        android:title="@string/action_view_mode"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_import"
        android:icon="@drawable/ic_file"
        android:title="@string/action_import_file"
        app:showAsAction="never" />
</menu>
