<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/app_selection_toolbar_height"
    android:background="@drawable/reader_selection_toolbar_bg"
    android:padding="@dimen/app_selection_toolbar_padding"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/selection_toolbar_copy"
            style="@style/ReaderSelectionToolbarAction"
            android:text="@string/selection_copy" />

        <TextView
            android:id="@+id/selection_toolbar_define"
            style="@style/ReaderSelectionToolbarAction"
            android:text="@string/selection_define" />

        <TextView
            android:id="@+id/selection_toolbar_highlight"
            style="@style/ReaderSelectionToolbarAction"
            android:text="@string/highlight_action" />

        <ImageButton
            android:id="@+id/selection_toolbar_more"
            style="@style/ReaderSelectionToolbarMoreAction"
            android:contentDescription="@string/selection_more"
            android:src="@drawable/ic_more_vert" />
    </LinearLayout>
</HorizontalScrollView>
